feat: define smtp auth endpoints
